workloads/ingress/grafana/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    external-dns.alpha.kubernetes.io/managed-by: external-dns
spec:
  rules:
    - host: grafana.dev.growbin.app
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
